Fix applications shortcuts
They need the absolute path in the exec path, so generate it with a .erb

--- a/local/share/applications/kbhelp.desktop.erb
+++ b/local/share/applications/kbhelp.desktop.erb
@@ -4,8 +4,8 @@ Version=1.0
 Name=Keyboard Help
 GenericName=Keyboard Help
 Comment=Show current keyboard layout
-TryExec=~/bin/kbhelp
-Exec=~/bin/kbhelp
+TryExec=<%= ENV['HOME'] %>/bin/kbhelp
+Exec=<%= ENV['HOME'] %>/bin/kbhelp
 Icon=
 Type=Application
 Terminal=false
