--- a/local/share/applications/em.desktop.erb
+++ b/local/share/applications/em.desktop.erb
@@ -4,8 +4,8 @@ Name=Emacs Client (GUI)
 GenericName=Text Editor
 Comment=GNU Emacs is an extensible, customizable text editor - and more
 MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;
-TryExec=~/bin/em
-Exec=~/bin/em %F
+TryExec=<%= ENV['HOME'] %>/bin/em
+Exec=<%= ENV['HOME'] %>/bin/em %F
 Icon=emacs
 Type=Application
 Terminal=false
